--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -39,7 +39,7 @@ body {
   }
   
   /* DESKTOP NAV */
-  
+
   nav,
   .nav-links {
     display: flex;
@@ -112,9 +112,10 @@ body {
   .menu-links {
     position: absolute;
     top: 100%;
-    right: 0;
+    right: 10;
     background-color: white;
     width: fit-content;
+    
     max-height: 0;
     overflow: hidden;
     transition: all 0.3 ease-in-out;
@@ -165,7 +166,7 @@ body {
 /* -------- HOME SECTION -------------- */
 section {
   padding-top: 4vh;
-  height: 40vh;
+  height: 27vh;
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
@@ -175,6 +176,7 @@ section {
   display: flex;
   justify-content: center;
   gap: 5rem;
+  position: relative;
 }
 
 .slogan {
@@ -185,7 +187,7 @@ section {
 
 .port-slogan{
   text-align: left;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .port-title {
@@ -200,24 +202,34 @@ section {
 
 .port-slogan3 {
   text-align: center;
-  font-size: 20px;
+  font-size: 50px;
 }
+
+.port-slogan4 {
+  text-align: center;
+  font-size: 20px;
+  
+}
+
 
 .home-computer-container {
   display: flex;
-  height: 400px;
-  width: 400px;
+  height: 600px;
+  width: 600px;
   margin: auto 0;
+}
+
+.container-section-1 {
+  padding: 50px;
 }
 
 /* Solid border */
 hr.solid {
-
-  color: black;
-  margin-left: 15rem;
-  margin-right: 15rem;
-  margin-top: 5rem;
- 
+  border-top: 3px solid #bbb;
+  margin-left: 10rem;
+  margin-right: 10rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 
@@ -232,15 +244,388 @@ div.main {
   
 }
 
+
+
+/* Media qurey section */
+
+@media screen and (max-width: 1200px) {
+  #desktop-nav {
+    display: none;
+  }
+  #hamburger-nav {
+    display: flex;
+  }
+
+  #container-section-1{
+    display: flex;
+  }
+ 
+  section {
+    height: fit-content;
+    margin: 0 5%;
+  }
+
+  .home-computer-container {
+    width: 200px;
+    height: 200px;
+    margin: 0 auto 2rem;
+  }
+
+  hr.solid {
+    border-top: 3px solid #bbb;
+    margin-left: 7rem;
+    margin-right: 7rem;
+    margin-top: 20px;
+    }
+
+    .port-slogan3, .port-slogan4 {
+      text-align: center;
+    }
+
+    .port-slogan3 {
+      padding-top: 30px;
+    }
+
+    .about-containers {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .section-container {
+      justify-content: center;
+    }
+
+
+}
+
+
+@media screen and (max-width: 1800px) {
+
+  #container-section-1 {
+    height: 60%;
+    position: relative;
+    display: flex;
+  }
+
+
+  section {
+    height: fit-content;
+    margin: 0 5%;
+
+  }
+  
+  .home-computer-container {
+    width: 600px;
+    height: 600px;
+  }
+
+  .about-containers {
+    flex-wrap: wrap;
+  }
+
+  .port-slogan3 {
+    padding-top: 40px;
+  }
+
+ 
+}
+
+@media screen and (max-width: 1600px) {
+
+  #container-section-1 {
+    height: 70%;
+    position: relative;
+    display: flex;
+  }
+
+
+  section {
+    height: fit-content;
+    margin: 0 5%;
+    display: flex;
+  }
+  
+  .home-computer-container {
+    width: 600px;
+    height: 600px;
+  }
+
+  .about-containers {
+    flex-wrap: wrap;
+  }
+
+  hr.solid {
+    border-top: 3px solid rgb(155, 153, 153);
+    margin-left: 7rem;
+    margin-right: 7rem;
+    margin-top: 70px;
+    }
+
+
+}
+
+@media screen and  (max-width: 600px) {
+
+  #container-section-1 {
+    height: 80%;
+    margin-bottom: 10px;
+    position: relative;
+    display: block;
+  }
+
+  section {
+    height: fit-content;
+    margin: 0 5%;
+    display: block;
+  }
+
+
+  .home-computer-container {
+    width: 300px;
+    height: 500px;
+  }
+  
+  .about-containers {
+    flex-wrap: wrap;
+  }
+
+  hr.solid {
+  border-top: 3px solid #bbb;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  margin-top: 20px;
+  }
+
+
+
+
+}
+
+/*/////////////////////////// ABOUT ME ////////////////////////////*/
+
+
+.main1{
+  text-align: center;
+  padding-top: 3%;
+}
+.myH3 {
+  text-align: center;
+  font-size: 45px;
+}
+
+
+#about {
+  position: relative;
+}
+
+.about-containers {
+  gap: 2rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  
+}
+
+.about-details-container {
+  justify-content: center;
+  flex-direction: column;
+}
+
+.about-containers,
+.about-details-container {
+  display: flex;
+}
+
+.about-pic {
+  border-radius: 2rem;
+}
+
+
+.details-container {
+  padding: 1.5rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+}
+
+
+
+.details-container1 {
+  padding: 1.5rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+}
+
+.details-container1:hover {
+  background-color: rgb(118, 249, 118);
+}
+
+.section-container {
+  gap: 4rem;
+  justify-content: center;
+}
+
+.section__pic-container {
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+
+a.expolink {
+  text-decoration: none;
+}
+
+.icon {
+  cursor: pointer;
+  height: 2rem;
+}
+
+.btn-container{
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.btn-color-2:hover {
+  background-color: #088e05;
+}
+
+.btn-color-2 {
+  border-radius: 30px;
+  padding: 10px;
+  font-weight: 400;
+  font-size: 40px;
+  font-family: poppins;
+  background-color: white;
+  border-color:#088e05;
+}
+
+
+/*////////////////////////// CONTACT FORM /////////////////////////*/
+
+.form{
+  padding-top: 5%;
+}
+form {
+  padding-top: 20px;
+  text-align: center;
+  padding-bottom: 50px;
+}
+
+.contact-title {
+  text-align: center;
+}
+
+.feedback-input {
+  color:white;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight:500;
+  font-size: 18px;
+  border-radius: 20px;
+  line-height: 22px;
+  background-color: transparent;
+  border:2px solid green;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width:60%;
+  box-sizing: border-box;
+  outline:0;
+}
+
+.feedback-input:focus { border:2px solid #CC4949; }
+
+textarea {
+  height: 150px;
+  line-height: 150%;
+  resize:vertical;
+}
+
+[type="submit"] {
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  width: 60%;
+  background: green;
+  border-radius:20px;
+  border:0;
+  cursor:pointer;
+  color:white;
+  font-size:24px;
+  padding-top:10px;
+  padding-bottom:10px;
+  transition: all 0.3s;
+  margin-top:-4px;
+  font-weight:700;
+  text-align: center;
+}
+[type="submit"]:hover { background:black; }
+
+
+.contactinfo {
+  list-style-type: none;
+  margin: 0;
+  
+  align-items: center;
+  font-weight: bold;
+  color: black; 
+}
+
+
+.H3 {
+  text-align: center;
+}
+
+li h3{
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
+
+.navbar1 {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  padding-top: 19px;
+  float: right;
+  font-weight: bold;
+  color: black; 
+}
+
+
+main {
+  padding-top: 5%;
+}
+
+
+
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  gap: 2rem;
+  font-size: 1.5rem;
+}
+
+.port-slogan5 {
+  text-align: center;
+  font-size: 30px;
+}
+
 /* Social media */
 
 .socialicons {
   display: flex;
   position:relative;
   margin: 0;
-  padding-top: 20px;
+  padding-top: 1px;
   justify-content: center;
-  
 }
 
 .socialicons li {
@@ -303,254 +688,3 @@ div.main {
 .socialicons li:nth-child(3) a:before {
   background: linear-gradient(115deg, #f9ce34, #ee2a7b, #6228d7);
 }
-
-/* Media qurey section */
-
-@media screen and (max-width: 1200px) {
-  #desktop-nav {
-    display: none;
-  }
-  #hamburger-nav {
-    display: flex;
-  }
-
-  #container-section-1{
-    display: flex;
-  }
- 
-  section {
-    height: fit-content;
-    margin: 0 5%;
-  }
-
-  .home-computer-container {
-    width: 200px;
-    height: 200px;
-    margin: 0 auto 2rem;
-  }
-}
-
-@media screen and (max-width: 1600px) {
-  #container-section-1 {
-    display: flex;
-    height: 50vh;
-    
-  }
-  section {
-    height: fit-content;
-    margin: 0 5%;
-    display: flex;
-  }
-  
-  .home-computer-container {
-    width: 600px;
-    height: 600px;
-  }
-
-  .about-containers {
-    flex-wrap: wrap;
-  }
-
-}
-
-@media screen and (max-width: 600px) {
-
-  #container-section-1 {
-    height: 20vh;
-    margin-bottom: 0;
-  }
-
-  section {
-    height: fit-content;
-    margin: 0 5%;
-    display: block;
-  }
-
-
-  .home-computer-container {
-    width: 500px;
-    height: 500px;
-    padding-left: 40px;
-  }
-  
-  .about-containers {
-    flex-wrap: wrap;
-  }
-
-}
-
-/*/////////////////////////// ABOUT ME ////////////////////////////*/
-
-
-.main1{
-  text-align: center;
-}
-.myH3 {
-  text-align: center;
-  font-size: 45px;
-}
-
-
-#about {
-  position: relative;
-}
-
-.about-containers {
-  gap: 2rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
-}
-
-.about-details-container {
-  justify-content: center;
-  flex-direction: column;
-}
-
-.about-containers,
-.about-details-container {
-  display: flex;
-}
-
-.about-pic {
-  border-radius: 2rem;
-}
-
-.details-container {
-  padding: 1.5rem;
-  flex: 1;
-  background: white;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  text-align: center;
-}
-
-.section-container {
-  gap: 1rem;
-  height: 80%;
-  display: flex;
-  
-}
-
-.section__pic-container {
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
-text-align: center;
-}
-
-.icon {
-  cursor: pointer;
-  height: 2rem;
-}
-
-/*////////////////////////// CONTACT FORM /////////////////////////*/
-
-.form{
-  padding-top: 10%;
-}
-form {
-  padding-top: 20px;
-  text-align: center;
-}
-
-.contact-title {
-  text-align: center;
-}
-
-.feedback-input {
-  color:white;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight:500;
-  font-size: 18px;
-  border-radius: 5px;
-  line-height: 22px;
-  background-color: transparent;
-  border:2px solid green;
-  transition: all 0.3s;
-  padding: 13px;
-  margin-bottom: 15px;
-  width:60%;
-  box-sizing: border-box;
-  outline:0;
-}
-
-.feedback-input:focus { border:2px solid #CC4949; }
-
-textarea {
-  height: 150px;
-  line-height: 150%;
-  resize:vertical;
-}
-
-[type="submit"] {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-  width: 60%;
-  background: green;
-  border-radius:5px;
-  border:0;
-  cursor:pointer;
-  color:white;
-  font-size:24px;
-  padding-top:10px;
-  padding-bottom:10px;
-  transition: all 0.3s;
-  margin-top:-4px;
-  font-weight:700;
-  text-align: center;
-}
-[type="submit"]:hover { background:black; }
-
-
-
-
-
-.contactinfo {
-  list-style-type: none;
-  margin: 0;
-  
-  align-items: center;
-  font-weight: bold;
-  color: black; 
-}
-
-.H3 {
-  text-align: center;
-}
-
-li h3{
-  padding-right: 30px;
-  padding-left: 30px;
-}
-
-
-.navbar1 {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  padding-top: 19px;
-  float: right;
-  font-weight: bold;
-  color: black; 
-}
-
-iframe {
-  border-radius: 10px 10px 10px 10px;
-}
-
-
-main {
-  padding-top: 5%;
-}
-
-footer {
-  padding: 100px;
-  text-align: center;
-  background-color:darkgreen;
-}
-
-footer a{
-  color: white;
-  padding-bottom: 0;
-}
-
